FIX KOP-330 add extra margin to make the warning bar stand out more

--- a/guides/koppeltaal/styles/koppeltaal/style.css
+++ b/guides/koppeltaal/styles/koppeltaal/style.css
@@ -78,4 +78,5 @@ body {
   padding-left: 0.5em;
   font-size: 2em; 
   color: #894503;
+  margin-bottom: 2em;
 }
